# mdml-cgi

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Catch2.LICENSE  README.md  run-tests.sh
apps/: CMakeLists.txt  main.cpp  mdml.cpp
ci/: run-tests.sh
data/: index-old.html  index.html  style.css  test.md  test.thtml
data/fonts/: Berkeley-Mono.css  IBM-Plex-Sans.css
editorconfig/: local.vimrc
include/: Application.hpp  CgiApplication.hpp  CgiRequestClient.hpp  IRouteHandler.hpp  MarkdownRouteHandler.hpp  debuginfo.hpp  exception.hpp  types.hpp
include/private/: debuginfo.hpp  platform.hpp
include/types/: Result.hpp
mdml-cgi/: CMakeLists.txt  mdml.cpp
src/: Application.cpp  Application.hpp  CMakeLists.txt  CgiApplication.cpp  CgiRequestClient.cpp  CgiRequestHandler.cpp  MarkdownRouteHandler.cpp  debuginfo.cpp  exception.cpp  exceptions.hpp  libmdml.cpp  libmdml.hpp
tests/: Application-test.cpp  CMakeLists.txt  CgiApplication-test.cpp  CgiRequestClient-test.cpp  CgiRequestHandler-test.cpp  MarkdownRouteHandler-test.cpp  Result-test.cpp  common.hpp  exception-test.cpp  exceptions-test.cpp  runtime-tests.cpp  tests-common.hpp
